--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
   </svg>
 
   <header class="header">
+    <a href="#" class="scroll-to-form" id="scrollButton">Надіслати запит</a>
+
     <div class="header__background"></div>
     <div class="nav__social--desktop-wrap">
       <div class="nav__social--desktop container">
