--- a/index.html
+++ b/index.html
@@ -472,36 +472,6 @@
       <div class="partners__background"></div>
     </section>
 
-    <div class="wrapper">
-      <div class="form">
-        <form action="#" id="form" class="form__body" enctype="multipart/form-data">
-          <h1 class="form__title">Відправка</h1>
-          <div class="form__item">
-            <label for="formName" class="form__label">Ім'я*:</label>
-            <input id="formName" type="text" name="name" class="form__input _req" required>
-          </div>
-          <div class="form__item">
-            <label for="formEmail" class="form__label">E-mail*:</label>
-            <input id="formEmail" type="email" name="email" class="form__input _req _email" required>
-          </div>
-          <div class="form__item">
-            <label for="formMessage" class="form__label">Повідомлення:</label>
-            <textarea name="message" id="formMessage" class="form__input"></textarea>
-          </div>
-          <div class="form__item">
-            <label class="form__label">Прикріпити фото:</label>
-            <div class="file">
-              <div class="file__item">
-                <input id="formImage" type="file" name="image" class="file__input" accept=".jpg, .png, .gif">
-                <div class="file__button">Обрати</div>
-              </div>
-              <div id="formPreview" class="file__preview"></div>
-            </div>
-          </div>
-          <button type="submit" class="form__button">Відправити</button>
-        </form>
-      </div>
-    </div>
     <!-- <section class="calculation">
       <div class="calculation__background"></div>
       <div class="calculation__inner">
@@ -531,6 +501,53 @@
         </div>
       </div>
     </section> -->
+
+    <div class="calculation__background"></div>
+    <div class="calculation__inner">
+      <div class="calculation__wrapper container">
+        <div class="calculation__content">
+          <h3 class="section__title calculation__title" data-lang="calculation_page-1"></h3>
+        </div>
+        <div class="calculation__form-container">
+          <div class="wrapper">
+            <div class="form ">
+              <form action="#" id="form" class="form__body calculation__form" enctype="multipart/form-data">
+
+                <div class="form__item">
+                  <label for="formName" class="form__label " data-lang="calculation_page-4"></label>
+                  <input id="formName" type="text" class="form__input _req" required>
+                </div>
+                <div class="form__item">
+                  <label for="formEmail" data-lang="calculation_page-5" class="form__label"></label>
+                  <input id="formEmail" type="email" name="email" class="form__input _req _email" required>
+                </div>
+                <div class="form__item">
+                  <label for="formMessage" class="form__label" data-lang="calculation_page-6"></label>
+                  <textarea name="message" id="formMessage"
+                    class=" form-textarea form__input form-textarea "></textarea>
+                </div>
+                <div class="form__item">
+                  <label class="form__label">Прикріпити файл:</label data-lang="calculation_page-2">
+                  <div class="file">
+                    <div class="file__item">
+                      <input id="formImage" type="file" name="image" class="file__input"
+                        accept=".jpg, .png, .gif, .pdf">
+                      <div class="file__button">Обрати</div>
+                    </div>
+                    <div id="formPreview" class="file__preview"></div>
+                  </div>
+                </div>
+                <button class="button button-form" type="submit" id="btn_send" data-lang="calculation_page-3"
+                  value="Надіслати">
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </main>
   <footer class="footer">
     <div class="footer__bootom">
