--- a/index.html
+++ b/index.html
@@ -515,11 +515,11 @@
 
                 <div class="form__item">
                   <label for="formName" class="form__label " data-lang="calculation_page-4"></label>
-                  <input id="formName" type="text" class="form__input _req" required>
+                  <input id="formName" type="text" name="name" class="form__input _req">
                 </div>
                 <div class="form__item">
                   <label for="formEmail" data-lang="calculation_page-5" class="form__label"></label>
-                  <input id="formEmail" type="email" name="email" class="form__input _req _email" required>
+                  <input id="formEmail" type="email" name="email" class="form__input _req _email">
                 </div>
                 <div class="form__item">
                   <label for="formMessage" class="form__label" data-lang="calculation_page-6"></label>
