--- a/index.html
+++ b/index.html
@@ -517,18 +517,18 @@
                   <input id="formName" type="text" name="name" class="form__input _req">
                 </div>
                 <div class="form__item">
-                  <label for="formTel" class="form__label">Телефон</label>
+                  <label for="formTel" data-lang="calculation_page-7" class="form__label"></label>
                   <input id="formTel" type="tel" name="tel" class="form__input _req input-number" pattern="[0-9]{10}">
                 </div>
                 <div class="form__item">
-                  <label for="formEmail" data-lang="calculation_page-5" class="form__label">Email</label>
+                  <label for="formEmail" data-lang="calculation_page-5" class="form__label"></label>
                   <input id="formEmail" type="email" name="email" class="form__input _req _email">
                 </div>
                 <div class="form__item">
-                  <label for="formMessage" class="form__label" data-lang="calculation_page-6">Повідомлення</label>
+                  <label for="formMessage" class="form__label" data-lang="calculation_page-6"></label>
                   <textarea name="message" id="formMessage" class="form-textarea form__input form-textarea "></textarea>
                 </div>
-                <div class="form__item">
+                <div class="form__item form__none">
                   <label for="formImage" class="form__label">Прикріпити файл (jpg, png, gif, pdf):</label>
                   <div class="file">
                     <div class="file__item">
