--- a/index.html
+++ b/index.html
@@ -518,7 +518,8 @@
                 </div>
                 <div class="form__item">
                   <label for="formTel" data-lang="calculation_page-7" class="form__label"></label>
-                  <input id="formTel" type="tel" name="tel" class="form__input _req" pattern="[0-9]{10-15}">
+                  <input id="formTel" type="tel" name="tel" class="form__input _req" pattern="[0-9]{10,15}"
+                    title="Please enter a valid phone number">
                 </div>
                 <div class="form__item">
                   <label for="formEmail" data-lang="calculation_page-5" class="form__label"></label>
