--- a/lazer.html
+++ b/lazer.html
@@ -285,6 +285,7 @@
 	</svg>
 
 	<header class="header">
+		<a href="#" class="scroll-to-form" id="scrollButton">Надіслати запит</a>
 		<div class="header__background l-header__background"></div>
 		<div class="nav__social--desktop-wrap">
 			<div class="nav__social--desktop container">
@@ -614,7 +615,8 @@
 								</div>
 								<div class="form__item">
 									<label for="formTel" data-lang="calculation_page-7" class="form__label"></label>
-									<input id="formTel" type="tel" name="tel" class="form__input _req input-number" pattern="[0-9]{10}">
+									<input id="formTel" type="tel" name="tel" class="form__input _req" pattern="[0-9]{10,15}"
+										title="Please enter a valid phone number">
 								</div>
 								<div class="form__item">
 									<label for="formEmail" data-lang="calculation_page-5" class="form__label"></label>
