--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
           d="m9.417 15.181-.397 5.584c.568 0 .814-.244 1.109-.537l2.663-2.545 5.518 4.041c1.012.564 1.725.267 1.998-.931l3.622-16.972.001-.001c.321-1.496-.541-2.081-1.527-1.714l-21.29 8.151c-1.453.564-1.431 1.374-.247 1.741l5.443 1.693 12.643-7.911c.595-.394 1.136-.176.691.218z" />
       </g>
     </symbol>
+    <symbol id="сalendar" viewBox="-6 0 32 32">
+      <path
+        d="M0 10v14.875c0 0.813 0.688 1.5 1.531 1.5h17.25c0.844 0 1.531-0.688 1.531-1.5v-14.875c0-0.813-0.688-1.5-1.531-1.5h-1.75v-0.156c0-0.531-0.156-1.125-0.531-1.563-0.406-0.406-1.031-0.719-1.938-0.719-0.938 0-1.563 0.313-1.938 0.719-0.406 0.438-0.563 1.031-0.563 1.563v0.156h-3.813v-0.156c0-0.531-0.156-1.125-0.531-1.563-0.406-0.406-1.031-0.719-1.969-0.719-0.906 0-1.531 0.313-1.906 0.719-0.406 0.438-0.563 1.031-0.563 1.563v0.156h-1.75c-0.844 0-1.531 0.688-1.531 1.5zM2.063 24.344v-3.25h3.656v3.25h-3.656zM2.063 20.594v-3.25h3.656v3.25h-3.656zM2.063 16.844v-3.281h3.656v3.281h-3.656zM4.781 10.969v-2.625c0-0.5 0.313-0.75 0.969-0.75 0.688 0 1 0.25 1 0.75v2.625c0 0.5-0.313 0.75-1 0.75-0.656 0-0.969-0.25-0.969-0.75zM6.219 24.344v-3.25h3.688v3.25h-3.688zM6.219 20.594v-3.25h3.688v3.25h-3.688zM6.219 16.844v-3.281h3.688v3.281h-3.688zM10.406 24.344v-3.25h3.688v3.25h-3.688zM10.406 20.594v-3.25h3.688v3.25h-3.688zM10.406 16.844v-3.281h3.688v3.281h-3.688zM14.594 24.344v-3.25h3.656v3.25h-3.656zM14.594 20.594v-3.25h3.656v3.25h-3.656zM14.594 16.844v-3.281h3.656v3.281h-3.656zM13.563 10.969v-2.625c0-0.5 0.313-0.75 1-0.75 0.625 0 0.969 0.25 0.969 0.75v2.625c0 0.5-0.313 0.75-0.969 0.75-0.688 0-1-0.25-1-0.75z">
+      </path>
+
+    </symbol>
   </svg>
 
   <header class="header">
@@ -435,6 +441,93 @@
       </div>
     </section>
 
+    <section class="news">
+      <div class="container">
+        <h3 class="section__title" data-lang="">Останні новини</h3>
+        <div class="news__container">
+
+          <div class="news__blok">
+            <div class="news__img">
+              <img src="img/lazer-pipe.jpg" alt="">
+            </div>
+            <div class="news__content-container">
+              <div class="news__content">
+                <h2 class="news__title">Новий лазерний труборіз1</h2>
+                <time datatime="2024-03-31" class="news__time">
+                  <svg class="news__svg " width="30" height="30">
+                    <use xlink:href="#сalendar"></use>
+                  </svg>
+                  31.03.2024</time>
+                <a href="#" class="section__text  news__link">Завдяки передовій технології, пристрій забезпечує
+                  високу
+                  ефективність </a>
+              </div>
+            </div>
+
+          </div>
+          <div class="news__blok">
+            <div class="news__img">
+              <img src="img/lazer-pipe.jpg" alt="">
+            </div>
+            <div class="news__content-container">
+              <div class="news__content">
+                <h2 class="news__title">Новий лазерний труборіз1</h2>
+                <time datatime="2024-03-31" class="news__time">
+                  <svg class="news__svg " width="30" height="30">
+                    <use xlink:href="#сalendar"></use>
+                  </svg>
+                  31.03.2024</time>
+                <a href="#" class="section__text  news__link">Завдяки передовій технології, пристрій забезпечує
+                  високу
+                  ефективність </a>
+              </div>
+            </div>
+
+          </div>
+          <div class="news__blok">
+            <div class="news__img">
+              <img src="img/lazer-pipe.jpg" alt="">
+            </div>
+            <div class="news__content-container">
+              <div class="news__content">
+                <h2 class="news__title">Новий лазерний труборіз1</h2>
+                <time datatime="2024-03-31" class="news__time">
+                  <svg class="news__svg " width="30" height="30">
+                    <use xlink:href="#сalendar"></use>
+                  </svg>
+                  31.03.2024</time>
+                <a href="#" class="section__text  news__link">Завдяки передовій технології, пристрій забезпечує
+                  високу
+                  ефективність </a>
+              </div>
+            </div>
+
+          </div>
+          <div class="news__blok">
+            <div class="news__img">
+              <img src="img/lazer-pipe.jpg" alt="">
+            </div>
+            <div class="news__content-container">
+              <div class="news__content">
+                <h2 class="news__title">Новий лазерний труборіз1</h2>
+                <time datatime="2024-03-31" class="news__time">
+                  <svg class="news__svg " width="30" height="30">
+                    <use xlink:href="#сalendar"></use>
+                  </svg>
+                  31.03.2024</time>
+                <a href="#" class="section__text  news__link">Завдяки передовій технології, пристрій забезпечує
+                  високу
+                  ефективність </a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
     <section class="section partners">
       <div class="container">
         <div>
@@ -471,36 +564,6 @@
       </div>
       <div class="partners__background"></div>
     </section>
-
-    <!-- <section class="calculation">
-      <div class="calculation__background"></div>
-      <div class="calculation__inner">
-        <div class="calculation__wrapper container">
-          <div class="calculation__content">
-            <h3 class="section__title calculation__title" data-lang="calculation_page-1"></h3>
-          </div>
-          <div class="calculation__form-container">
-            <form class="calculation__form" action="send_mail.php" name="form" method="POST">
-              <input class="input-name" type="text" placeholder="Name" name="name" id="name"
-                data-lang="calculation_page-4" />
-              <input class="input-number" type="text" placeholder="E-mail" name="email" id="email"
-                data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" data-lang="calculation_page-5" />
-
-
-              <input class="input-number" type="text" placeholder="099 123 23 12" name="phone" id="phone" />
-              <textarea class="form-textarea" cols="40" rows="6" placeholder="Comment"
-                data-lang="calculation_page-6"></textarea>
-              <label class="calculation__label" for="file" data-lang="calculation_page-2"></label>
-              <input class="calculation__input-file" type="file" id="file" />
-
-              <button class="button button-form" type="submit" id="btn_send" data-lang="calculation_page-3"
-                value="Надіслати">
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <section class="calculation">
       <div class="calculation__background"></div>
       <div class="calculation__inner">
