--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link rel="website icon" type="png" href="../img/pngegg.png" />
+
 </head>
 
 <body>
@@ -443,86 +444,77 @@
 
     <section class="news">
       <div class="container">
-        <h3 class="section__title" data-lang="">Останні новини</h3>
+        <h3 class="section__title" data-lang="news-1"></h3>
         <div class="news__container">
 
           <div class="news__blok">
             <div class="news__img">
-              <img src="img/lazer-pipe.jpg" alt="">
+              <img src="img/news/new-ceh.jpg" alt="new ceh">
             </div>
             <div class="news__content-container">
               <div class="news__content">
-                <h2 class="news__title">Новий лазерний труборіз1</h2>
-                <time datatime="2024-03-31" class="news__time">
+                <h2 class="news__title" data-lang="news-2"></h2>
+                <time datatime="2024-05-01" class="news__time">
                   <svg class="news__svg " width="30" height="30">
                     <use xlink:href="#сalendar"></use>
                   </svg>
-                  31.03.2024</time>
-                <a href="#" class="section__text  news__link">Завдяки передовій технології, пристрій забезпечує
-                  високу
-                  ефективність </a>
+                  01.05.2024</time>
+                <a class="section__text  news__link" data-lang="news-3"></a>
               </div>
             </div>
 
           </div>
           <div class="news__blok">
             <div class="news__img">
-              <img src="img/lazer-pipe.jpg" alt="">
+              <img src="img/news/welding-work.jpg" alt="">
             </div>
             <div class="news__content-container">
               <div class="news__content">
-                <h2 class="news__title">Новий лазерний труборіз1</h2>
+                <h2 class="news__title" data-lang="news-4"></h2>
                 <time datatime="2024-03-31" class="news__time">
                   <svg class="news__svg " width="30" height="30">
                     <use xlink:href="#сalendar"></use>
                   </svg>
                   31.03.2024</time>
-                <a href="#" class="section__text  news__link">Завдяки передовій технології, пристрій забезпечує
-                  високу
-                  ефективність </a>
+                <a class="section__text  news__link" data-lang="news-5"></a>
+              </div>
+            </div>
+
+          </div>
+          <!-- <div class="news__blok">
+            <div class="news__img">
+              <img src="img/news/bg.jpg" alt="">
+            </div>
+            <div class="news__content-container">
+              <div class="news__content">
+                <h2 class="news__title" data-lang="news-6">Скоро</h2>
+                <time datatime="2024-03-31" class="news__time">
+                  <svg class="news__svg " width="30" height="30">
+                    <use xlink:href="#сalendar"></use>
+                  </svg></time>
+                <a href="#" class="section__text  news__link"></a>
               </div>
             </div>
 
           </div>
           <div class="news__blok">
             <div class="news__img">
-              <img src="img/lazer-pipe.jpg" alt="">
+              <img src="img/news/bg.jpg" alt="">
             </div>
             <div class="news__content-container">
               <div class="news__content">
-                <h2 class="news__title">Новий лазерний труборіз1</h2>
+                <h2 class="news__title">Скоро</h2>
                 <time datatime="2024-03-31" class="news__time">
                   <svg class="news__svg " width="30" height="30">
                     <use xlink:href="#сalendar"></use>
                   </svg>
-                  31.03.2024</time>
-                <a href="#" class="section__text  news__link">Завдяки передовій технології, пристрій забезпечує
-                  високу
-                  ефективність </a>
+                </time>
+                <a href="#" class="section__text  news__link"></a>
               </div>
-            </div>
+            </div> -->
 
-          </div>
-          <div class="news__blok">
-            <div class="news__img">
-              <img src="img/lazer-pipe.jpg" alt="">
-            </div>
-            <div class="news__content-container">
-              <div class="news__content">
-                <h2 class="news__title">Новий лазерний труборіз1</h2>
-                <time datatime="2024-03-31" class="news__time">
-                  <svg class="news__svg " width="30" height="30">
-                    <use xlink:href="#сalendar"></use>
-                  </svg>
-                  31.03.2024</time>
-                <a href="#" class="section__text  news__link">Завдяки передовій технології, пристрій забезпечує
-                  високу
-                  ефективність </a>
-              </div>
-            </div>
-
-          </div>
         </div>
+      </div>
       </div>
     </section>
 
