--- a/index.html
+++ b/index.html
@@ -155,6 +155,15 @@
           <div class="nav__inner">
             <ul class="nav__list">
               <li class="nav__item">
+                <a href="product.html" class="link-hover nav__item-link" data-lang="nav_page-4"></a>
+                <div class="dropdown">
+                  <a href="ag-equipment.html" class="link__dropdown link-hover " data-lang="nav_page-5"></a>
+                  <a href="furniture-elements.html" class="link__dropdown link-hover" data-lang="nav_page-6"></a>
+                  <a href="decor-elements.html" class="link__dropdown link-hover" data-lang="nav_page-7">
+                  </a>
+                </div>
+              </li>
+              <li class="nav__item">
                 <a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
               </li>
               <li class="nav__item">
@@ -481,39 +490,56 @@
             </div>
 
           </div>
-          <!-- <div class="news__blok">
-            <div class="news__img">
-              <img src="img/news/bg.jpg" alt="">
+          <div class="news__blok news__blok-mobile">
+            <div class="news__video news__img">
+              <iframe src="https://www.youtube.com/embed/3SaxY9uG6yM?si=OFly_WcxyNk-JCT8" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="news__content-container">
               <div class="news__content">
-                <h2 class="news__title" data-lang="news-6">Скоро</h2>
-                <time datatime="2024-03-31" class="news__time">
-                  <svg class="news__svg " width="30" height="30">
-                    <use xlink:href="#сalendar"></use>
-                  </svg></time>
-                <a href="#" class="section__text  news__link"></a>
-              </div>
-            </div>
-
-          </div>
-          <div class="news__blok">
-            <div class="news__img">
-              <img src="img/news/bg.jpg" alt="">
-            </div>
-            <div class="news__content-container">
-              <div class="news__content">
-                <h2 class="news__title">Скоро</h2>
+                <h2 class="news__title">«Ластівка», яка заміняє 50 воїнів</h2>
                 <time datatime="2024-03-31" class="news__time">
                   <svg class="news__svg " width="30" height="30">
                     <use xlink:href="#сalendar"></use>
                   </svg>
+                  28.04.2024
                 </time>
-                <a href="#" class="section__text  news__link"></a>
+                <a class="section__text  news__link">Довгий час машина слугувала допомогою для 24 ОМБр, але вийшли з
+                  ладу її основні механізми. За допомогою ластівки, за день можна спорудити до кілометра окопів на лінії
+                  фронту, особливо там, де лотати не допомагають.</a>
               </div>
-            </div> -->
+            </div>
+
+          </div>
+
+          <div class="news__blok news__blok-mobile">
+            <div class=" news__img news__video">
+              <iframe src="https://www.youtube.com/embed/Kq4uixJ_OJ0" title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <div class="news__content-container">
+              <div class="news__content">
+                <h2 class="news__title">Команда "АРМАКС МГ " щиро вдячна усім небайдужим за активну підтримку та
+                  допомогу у відновленні техніки</h2>
+                <time datatime="2024-03-31" class="news__time">
+                  <svg class="news__svg " width="30" height="30">
+                    <use xlink:href="#сalendar"></use>
+                  </svg>
+                  02.07.2024
+                </time>
+                <a class="section__text  news__link">Ремонт спеціальної техніки упродовж трьох
+                  тижнів виконувало маталообробне підприємтво АрмаксМГ у Ківерцях. Спільними зусиллями ластівку -
+                  полкову землерийну машину, яка риє окопи і може замінити півсотні людей, поставили на колеса</a>
+              </div>
+            </div>
+
+          </div>
 
         </div>
+
       </div>
       </div>
     </section>
@@ -527,7 +553,7 @@
           <p class="section__text section--center-text" data-lang="partners_page-2"></p>
         </div>
         <div class="partners__slider">
-          <div class="swiper">
+          <div class="swiper swiper__partners">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="img/skf-logo.svg" alt="skf" width="190" height="150" />
@@ -709,13 +735,13 @@
       </div>
     </div>
   </footer>
-
+  <script src="js/lang.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/index.js"></script>
 
   <script src="js/swiper.js"></script>
-  <script src="js/lang.js"></script>
+
   <script src="js/fslightbox.js"></script>
 
   <script src="https://kit.fontawesome.com/fce9a50d02.js" crossorigin="anonymous"></script>
