--- a/ag-equipment.html
+++ b/ag-equipment.html
@@ -83,7 +83,7 @@
 
 	<header class="header-product">
 
-		<div class="header__background-product"></div>
+		<div class="header__background-ag"></div>
 		<div class="nav__social--desktop-wrap">
 			<div class="nav__social--desktop container">
 				<ul class="nav__social-list--desktop">
@@ -153,24 +153,36 @@
 				<nav class="nav">
 					<div class="nav__inner">
 						<ul class="nav__list">
-							<li class="nav__item">
-								<a href="product.html" class="link-hover nav__item-link" data-lang="nav_page-4">Products</a>
-								<div class="dropdown">
-									<a href="ag-equipment.html" class="link__dropdown link-hover " data-lang="nav_page-5"></a>
-									<a href="furniture-elements.html" class="link__dropdown link-hover" data-lang="nav_page-6"></a>
-									<a href="decor-elements.html" class="link__dropdown link-hover" data-lang="nav_page-7">Елементи
-										декору</a>
-								</div>
-							</li>
-							<li class="nav__item">
-								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
-							</li>
+
 							<li class="nav__item">
 								<a href="about-us.html" class="link-hover" data-lang="nav_page-2"></a>
 							</li>
 							<li class="nav__item">
 								<a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
 							</li>
+							<li class="nav__item">
+								<a href="product.html" class="link--active nav__item-link" data-lang="nav_page-4"></a>
+								<div class="dropdown">
+									<a href="ag-equipment.html" class="link__dropdown link-hover" data-lang="nav_page-5"></a>
+									<a href="furniture-elements.html" class="link__dropdown link-hover" data-lang="nav_page-6"></a>
+									<a href="decor-elements.html" class="link__dropdown link-hover" data-lang="nav_page-7"></a>
+									<a href="сustom-orders.html" class="link__dropdown link-hover" data-lang="nav_page-8"></a>
+
+								</div>
+							</li>
+							<li class="nav__item">
+								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
+								<div class="dropdown dropdown--width">
+									<a href="lazer.html" class="link__dropdown link-hover " data-lang="footer_page-6-1"></a>
+									<a href="sheet-bending.html" class="link__dropdown link-hover" data-lang="footer_page-7-1"></a>
+									<a href="dyeing.html" class="link__dropdown link-hover" data-lang="footer_page-8-1"></a>
+									<a href="welding.html" class="link__dropdown link-hover" data-lang="footer_page-9-1"></a>
+									<a href="locksmith.html" class="link__dropdown link-hover" data-lang="footer_page-10-1"></a>
+									<a href="mechanical-processing.html" class="link__dropdown link-hover"
+										data-lang="footer_page-11-1"></a>
+								</div>
+							</li>
+
 						</ul>
 
 						<ul class="nav__list nav__list-social">
@@ -214,8 +226,7 @@
 
 			<div class="header__content--container">
 				<div class="header__content-product ">
-					<h1 class="product__title" data-lang="">
-						Наші продукти
+					<h1 class="product__title" data-lang="wara_page-3-1">
 					</h1>
 				</div>
 			</div>
@@ -225,19 +236,36 @@
 	<main class="main">
 		<div class="container">
 			<div class="bucket">
-				<h2 class="section__title"><a href="#" class="section__link">Для фронтальних навантужувачів</a></h2>
+				<h2 class="section__title"><a href="front-loaders.html" class="section__link">Для фронтальних навантужувачів</a>
+				</h2>
+
 				<section>
+
 					<div class="swiper swiper__product mySwiper">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
 								<article class="product__card">
 									<div class="product__card-container">
 										<div class="product__img">
+											<img src="../img/cards/gak-big-beg/gak-big-beg-1.png" alt="" width="100%">
+										</div>
+										<div class="product__content">
+											<p class="product__name">Гак під біг-бег</p>
+											<p class="product__code">1</p>
+											<p class="product__price">20 ₴</p>
+										</div>
+										<a href="SM-01.html" class="product__link"></a>
+								</article>
+							</div>
+							<div class="swiper-slide">
+								<article class="product__card">
+									<div class="product__card-container">
+										<div class="product__img">
 											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
 										</div>
 										<div class="product__content">
 											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-01</p>
+											<p class="product__code">KVSH-04</p>
 											<p class="product__price">51 600 ₴</p>
 										</div>
 										<a href="SM-01.html" class="product__link"></a>
@@ -251,21 +279,7 @@
 										</div>
 										<div class="product__content">
 											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-02</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-03</p>
+											<p class="product__code">KVSH-04</p>
 											<p class="product__price">51 600 ₴</p>
 										</div>
 										<a href="SM-01.html" class="product__link"></a>
