--- a/contacts.html
+++ b/contacts.html
@@ -158,15 +158,36 @@
         <nav class="nav">
           <div class="nav__inner">
             <ul class="nav__list">
-              <li class="nav__item">
-                <a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
-              </li>
+
               <li class="nav__item">
                 <a href="about-us.html" class="link-hover" data-lang="nav_page-2"></a>
               </li>
               <li class="nav__item">
-                <a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
+                <a href="contacts.html" class=" link--active" data-lang="nav_page-3"></a>
               </li>
+              <li class="nav__item">
+                <a href="product.html" class="link-hover nav__item-link" data-lang="nav_page-4"></a>
+                <div class="dropdown">
+                  <a href="ag-equipment.html" class="link__dropdown link-hover " data-lang="nav_page-5"></a>
+                  <a href="furniture-elements.html" class="link__dropdown link-hover" data-lang="nav_page-6"></a>
+                  <a href="decor-elements.html" class="link__dropdown link-hover" data-lang="nav_page-7"></a>
+                  <a href="сustom-orders.html" class="link__dropdown link-hover" data-lang="nav_page-8"></a>
+
+                </div>
+              </li>
+              <li class="nav__item">
+                <a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
+                <div class="dropdown dropdown--width">
+                  <a href="lazer.html" class="link__dropdown link-hover " data-lang="footer_page-6-1"></a>
+                  <a href="sheet-bending.html" class="link__dropdown link-hover" data-lang="footer_page-7-1"></a>
+                  <a href="dyeing.html" class="link__dropdown link-hover" data-lang="footer_page-8-1"></a>
+                  <a href="welding.html" class="link__dropdown link-hover" data-lang="footer_page-9-1"></a>
+                  <a href="locksmith.html" class="link__dropdown link-hover" data-lang="footer_page-10-1"></a>
+                  <a href="mechanical-processing.html" class="link__dropdown link-hover"
+                    data-lang="footer_page-11-1"></a>
+                </div>
+              </li>
+
             </ul>
 
             <ul class="nav__list nav__list-social">
@@ -175,7 +196,7 @@
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#phone"></use>
                   </svg>
-                  +38 (099) 132 45 67
+                  +38 (096) 123 91 21
                 </a>
               </li>
               <li class="nav__item-social">
