--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
 
           <div class="news__blok news__blok-mobile">
             <div class=" news__img news__video">
-              <iframe src="https://youtu.be/CS66bPvbtpw?si=rfC8fnubV6Xf6xj6" title="YouTube video player"
-                frameborder="0"
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/CS66bPvbtpw?si=sF1yumO5kDzCHMk9"
+                title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
