--- a/ag-equipment.html
+++ b/ag-equipment.html
@@ -250,11 +250,12 @@
 											<img src="../img/cards/gak-big-beg/gak-big-beg-1.png" alt="" width="100%">
 										</div>
 										<div class="product__content">
-											<p class="product__name">Гак під біг-бег</p>
-											<p class="product__code">1</p>
-											<p class="product__price">20 ₴</p>
+											<p class="product__code">№1</p>
+											<p class="product__name">Гак для біг бегів</p>
+
+											<p class="product__price">29 000 ₴</p>
 										</div>
-										<a href="SM-01.html" class="product__link"></a>
+										<a href="card1.html" class="product__link"></a>
 								</article>
 							</div>
 							<div class="swiper-slide">
