--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" data-lang="wara_page-2"></a>
+                  <a href="furniture-elements.html" class="ware__name-link" data-lang="wara_page-2"></a>
                 </div>
               </figcaption>
             </figure>
@@ -429,7 +429,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" data-lang="wara_page-3"></a>
+                  <a href="ag-equipment.html" class="ware__name-link" data-lang="wara_page-3"></a>
                 </div>
               </figcaption>
             </figure>
@@ -443,7 +443,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" data-lang="wara_page-4"></a>
+                  <a href="decor-elements.html" class="ware__name-link" data-lang="wara_page-4"></a>
                 </div>
               </figcaption>
             </figure>
@@ -455,7 +455,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" data-lang="wara_page-5"></a>
+                  <a href="сustom-orders.html" class="ware__name-link" data-lang="wara_page-5"></a>
                 </div>
               </figcaption>
             </figure>
