--- a/card1.html
+++ b/card1.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>ArmaxMG</title>
-	<link rel="stylesheet" href="styles/style-min.css" />
+	<link rel="stylesheet" href="../styles/style-min.css" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700&display=swap"
@@ -81,9 +81,7 @@
 		</symbol>
 	</svg>
 
-	<header class="header-product">
-
-		<div class="header__background-ag"></div>
+	<header class="">
 		<div class="nav__social--desktop-wrap">
 			<div class="nav__social--desktop container">
 				<ul class="nav__social-list--desktop">
@@ -162,7 +160,7 @@
 							</li>
 							<li class="nav__item">
 								<a href="product.html" class="link--active nav__item-link" data-lang="nav_page-4"></a>
-								<div class="dropdown">
+								<div class="dropdown dropdown--bcg">
 									<a href="ag-equipment.html" class="link__dropdown link-hover" data-lang="nav_page-5"></a>
 									<a href="furniture-elements.html" class="link__dropdown link-hover" data-lang="nav_page-6"></a>
 									<a href="decor-elements.html" class="link__dropdown link-hover" data-lang="nav_page-7"></a>
@@ -172,7 +170,7 @@
 							</li>
 							<li class="nav__item">
 								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
-								<div class="dropdown dropdown--width">
+								<div class="dropdown dropdown--width dropdown--bcg">
 									<a href="lazer.html" class="link__dropdown link-hover " data-lang="footer_page-6-1"></a>
 									<a href="sheet-bending.html" class="link__dropdown link-hover" data-lang="footer_page-7-1"></a>
 									<a href="dyeing.html" class="link__dropdown link-hover" data-lang="footer_page-8-1"></a>
@@ -224,114 +222,145 @@
 				</nav>
 			</div>
 
-			<div class="header__content--container">
-				<div class="header__content-product ">
-					<h1 class="product__title" data-lang="">Фронтальні навантажувачі
-					</h1>
-				</div>
-			</div>
 		</div>
 	</header>
 
 	<main class="main">
+
 		<div class="container">
-			<div class="bucket">
-				<div class="breadcrumbs">
-					<ul class="breadcrumbs__list">
-						<li class="breadcrumbs__item"><a href="product.html">Продукти</a></li>
-						<li class="breadcrumbs__item"><a href="ag-equipment.html">СГ обладнання</a></li>
-						<li class="breadcrumbs__item"><span>Фронтальні навантажувачі</span>
-					</ul>
-				</div>
+			<div class="breadcrumbs">
+				<ul class="breadcrumbs__list">
+					<li class="breadcrumbs__item"><a href="product.html">Продукти</a></li>
+					<li class="breadcrumbs__item"><a href="ag-equipment.html">СГ обладнання</a></li>
+					<li class="breadcrumbs__item"><a href="front-loaders.html">Фронтальні навантажувачі</a>
+					<li class="breadcrumbs__item"><span>Гак для біг бегі</span>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="card__bkg-container">
+			<div class="card__bkg"></div>
+			<div class="container--margin-top">
 
-				<section>
-					<div class="goods">
-						<div class="product__box">
-							<article class="product__card">
-								<div class="product__card-container">
-									<div class="product__img">
-										<img src="../img/cards/gak-big-beg/gak-big-beg-1.png" alt="" width="100%">
-									</div>
-									<div class="product__content">
-										<p class="product__code">№1</p>
-										<p class="product__name">Гак для біг бегів</p>
+				<section class="card">
+					<div class="container card__container">
+						<div class="card-top">
+							<h1 class="card__title">Гак для біг бегі</h1>
+							<p class="card__article">Артикул: №1</p>
+							<div>
+								<i class="mdi mdi-check-all"></i>
+								<p class="card__text">
+									Є в наявності
+								</p>
+							</div>
 
-										<p class="product__price">29 000 ₴</p>
+						</div>
+						<div class="card__gallery">
+							<div class="swiper mySwiper2">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<div class="swiper-zoom-container">
+											<img src="img/cards/gak-big-beg/gak-big-beg-1.png" />
+										</div>
 									</div>
-									<a href="card1.html" class="product__link"></a>
-							</article>
-							<article class="product__card">
-								<div class="product__card-container">
-									<div class="product__img">
+									<div class="swiper-slide">
+										<div class="swiper-zoom-container">
+											<img src="img/cards/gak-big-beg/gak-big-beg-2.png" />
+										</div>
 									</div>
-									<div class="product__content">
-										<p class="product__code">Очікуйте на оновлення товару!</p>
+									<div class="swiper-slide">
+										<div class="swiper-zoom-container">
+											<img src="img/cards/gak-big-beg/gak-big-beg-3.png" />
+										</div>
 									</div>
-							</article>
-							<article class="product__card">
-								<div class="product__card-container">
-									<div class="product__img">
+									<div class="swiper-slide">
+										<div class="swiper-zoom-container">
+											<img src="img/cards/gak-big-beg/gak-big-beg-4.png" />
+										</div>
 									</div>
-									<div class="product__content">
-										<p class="product__code">Очікуйте на оновлення товару!</p>
+									<div class="swiper-slide">
+										<div class="swiper-zoom-container">
+											<img src="img/cards/gak-big-beg/gak-big-beg-5.png" />
+										</div>
 									</div>
-							</article>
-							<article class="product__card">
-								<div class="product__card-container">
-									<div class="product__img">
+
+								</div>
+							</div>
+							<div thumbsSlider="" class="swiper mySwiper">
+								<div class="swiper-wrapper">
+									<div class="swiper-slide">
+										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-1.png" />
 									</div>
-									<div class="product__content">
-										<p class="product__code">Очікуйте на оновлення товару!</p>
+									<div class="swiper-slide">
+										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-2.png" />
 									</div>
-							</article>
-							<article class="product__card">
-								<div class="product__card-container">
-									<div class="product__img">
+									<div class="swiper-slide">
+										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-3.png" />
 									</div>
-									<div class="product__content">
-										<p class="product__code">Очікуйте на оновлення товару!</p>
+									<div class="swiper-slide">
+										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-4.png" />
 									</div>
-							</article>
-							<article class="product__card">
-								<div class="product__card-container">
-									<div class="product__img">
+									<div class="swiper-slide">
+										<img class="card__img" src="img/cards/gak-big-beg/gak-big-beg-5.png" />
 									</div>
-									<div class="product__content">
-										<p class="product__code">Очікуйте на оновлення товару!</p>
-									</div>
-							</article>
-							<article class="product__card">
-								<div class="product__card-container">
-									<div class="product__img">
-									</div>
-									<div class="product__content">
-										<p class="product__code">Очікуйте на оновлення товару!</p>
-									</div>
-							</article>
-							<article class="product__card">
-								<div class="product__card-container">
-									<div class="product__img">
-									</div>
-									<div class="product__content">
-										<p class="product__code">Очікуйте на оновлення товару!</p>
-									</div>
-							</article>
-							<!-- <div class="product__more">
-								<a href="chassis.html" class="product__more-link">
-									<span>Більше товару</span>
-									<svg width="13px" height="10px" viewBox="0 0 13 10">
-										<path d="M1,5 L11,5"></path>
-										<polyline points="8 1 12 5 8 9"></polyline>
-									</svg>
-								</a>
-							</div> -->
+								</div>
+
+							</div>
 						</div>
 
+						<div class="card-bottom">
+
+							<div class="card__table-wrapper">
+								<h3 class="news__title">Основні характеристики:</h3>
+								<table class="card__table">
+									<tbody>
+										<tr>
+											<th>Ширина:</th>
+											<td>1325 мм</td>
+										</tr>
+										<tr>
+											<th>Висота: </th>
+											<td>1972 мм</td>
+										</tr>
+										<tr>
+											<th>Глибина:</th>
+											<td>1029 мм</td>
+										</tr>
+										<tr>
+											<th>Вага:</th>
+											<td>176 кг</td>
+										</tr>
+										<tr>
+											<th>Основна сталь:</th>
+											<td>S355 </td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+
+							<div class="card__price">
+								<span class="card__price-tablet">₴29 000грн</span>
+								<button type="button" class="modal-active button menu__btn">Замовити</button>
+
+							</div>
+						</div>
 					</div>
 				</section>
+				<div class="container">
+					<p class="section__text section--center-text section__text--black">
+						Захват для біг-бегів — це спеціалізоване навісне обладнання, яке призначене для навантажувачів JCB, Manitou
+						та
+						Bobcat. Воно ефективно переміщує, завантажує та розвантажує біг-беги і контейнери, забезпечуючи
+						транспортування
+						добрив, зерна та інших упакованих товарів без втрат і пошкоджень. Це обладнання також дозволяє піднімати і
+						підвішувати мішки над сівалками та змішувачами, що значно полегшує завантаження посівного матеріалу.
+					</p>
+				</div>
 			</div>
-
 		</div>
+
+
+
 	</main>
 	<footer class="footer">
 		<div class="footer__bootom">
@@ -435,6 +464,23 @@
 			</div>
 		</div>
 	</footer>
+
+	<div class="modal">
+		<div class="modal__inner">
+			<div class="modal-content">
+				<button class="close-button"></button>
+				<section class="modal__content">
+					<h4 class="modal__title">Зворотній зв'язок</h4>
+					<p class="modal__text">Залиште Ваш номер телефону, або електрону адресу, і наш менеджер якнайшвидше
+						звʼяжеться з Вами!</p>
+					<form class="modal__form">
+						<input class="modal__input" type="text" placeholder="телефон або e-mail">
+						<button class="button button-modal" type="submit">Відправити запит</button>
+					</form>
+				</section>
+			</div>
+		</div>
+	</div>
 	<script src="js/lang.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
